implement users email confirmation, categories and lots functional, create other models